# three-plotter-renderer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  externals.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
chats/: Optimize Edge Segments.md  stragglers-chat.md
examples/: box.html  box.js  example01.html  example01.js  example02.html  example02.js  example03.html  example03.js  hidden-line-test.html  index.html  primitives-test.html  stl-viewer.html  styles.css
examples/models/: SnowflakeTealight2.stl  example01.stl  example02.stl  example03.stl
src/: analyzer.js  expander.js  gpu-silhouette.js  hatcher.js  hidden-line.js  index.d.ts  index.js  optimize.js  perspective-hatch.js  plotter-renderer.js  projector.js  slicer.js  three-plotter-renderer-original.js  three-plotter-renderer.js  wasm-geometry.js
src/geom/: booleanshape.js  geom.js  shapes.js
src/wasm-pkg/: geometry_wasm.d.ts  geometry_wasm.js  geometry_wasm_bg.wasm  geometry_wasm_bg.wasm.d.ts  package.json
tests/: exports.test.js  test.box.html  test.box.js
wasm/geometry-wasm/: Cargo.toml
wasm/geometry-wasm/src/: lib.rs
