[package]
name = "geometry-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Geoff Gaudreault"]
description = "WASM geometry processing for three-plotter-renderer"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
i_overlay = "4"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
